added some js client side code

--- a/TODO
+++ b/TODO
@@ -1,4 +1,4 @@
-1. Write JS Logic
+1. Write JS Logic - InProgress
 2. Database Design
 3. Database Code
-4. Implement Routing
+4. Implement Routing - InProgress
