added fetchBankDetails functionality

--- a/TODO
+++ b/TODO
@@ -3,6 +3,11 @@
 3. Database Code
 4. Implement Routing - InProgress
 
+
+// Docker command
+docker run -d --name mysql_devbox -p 3306:3306 -e MYSQL_ROOT_PASSWORD=sxycmfczbe2ru5v3 -e  mysql:latest
+
+
 Notes:
 
 1. Rest API look Like
